[refs #116804] land -> insitu WIP.

--- a/insitu/copernicus/theme/static/index.html
+++ b/insitu/copernicus/theme/static/index.html
@@ -46,16 +46,16 @@
                 <h2><a href="#" title="Home">Home</a></h2>
               </li>
               <li id="portaltab-global" class="plain">
-                <h2><a href="https://land.copernicus.eu/global" title="Global" target="_blank">Global</a></h2>
+                <h2><a href="https://insitu.copernicus.eu/global" title="Global" target="_blank">Global</a></h2>
               </li>
               <li id="portaltab-pan-european" class="plain">
-                <h2><a href="https://land.copernicus.eu/pan-european" title="Pan-European" target="_blank">Pan-European</a></h2>
+                <h2><a href="https://insitu.copernicus.eu/pan-european" title="Pan-European" target="_blank">Pan-European</a></h2>
               </li>
               <li id="portaltab-local" class="plain">
-                <h2><a href="https://land.copernicus.eu/local" title="Local" target="_blank">Local</a></h2>
+                <h2><a href="https://insitu.copernicus.eu/local" title="Local" target="_blank">Local</a></h2>
               </li>
               <li class="frozenEntry plain">
-                <h2><a href="https://land.copernicus.eu/in-situ" title="In situ" target="_blank">In situ</a></h2>
+                <h2><a href="https://insitu.copernicus.eu/in-situ" title="In situ" target="_blank">In situ</a></h2>
               </li>
             </ul>
           </div>
@@ -65,7 +65,7 @@
             <span id="breadcrumbs-you-are-here">You are here:</span>
 
             <span id="breadcrumbs-home">
-              <a href="https://land.copernicus.eu">Home</a>
+              <a href="https://insitu.copernicus.eu">Home</a>
             </span>
           </div>
 
@@ -99,28 +99,28 @@
                     <div class="" id="parent-fieldname-text-12d54a3490664608a9d04438d993bcf5">
                       <div style="width: 100%; float: left;">
                         <div class="photoAlbumEntry">
-                          <a href="https://land.copernicus.eu/global">
+                          <a href="https://insitu.copernicus.eu/global">
                             <span class="photoAlbumEntryWrapper">
                               <img src="generic-image.png" alt="Global" class=" image-inline" title="Global" />
                             </span>
                           </a>
                         </div>
                         <div class="photoAlbumEntry">
-                          <a href="https://land.copernicus.eu/pan-european">
+                          <a href="https://insitu.copernicus.eu/pan-european">
                             <span class="photoAlbumEntryWrapper">
                               <img src="generic-image.png" alt="Europe" class=" image-inline" title="Pan-European"/>
                             </span>
                           </a>
                         </div>
                         <div class="photoAlbumEntry">
-                          <a href="https://land.copernicus.eu/local">
+                          <a href="https://insitu.copernicus.eu/local">
                             <span class="photoAlbumEntryWrapper">
                               <img src="generic-image.png" alt="Local" class=" image-inline" title="Local"/>
                             </span>
                           </a>
                         </div>
                         <div class="photoAlbumEntry frozenEntry">
-                          <a href="https://land.copernicus.eu/in-situ">
+                          <a href="https://insitu.copernicus.eu/in-situ">
                             <span class="photoAlbumEntryWrapper">
                               <img src="generic-image.png" alt="White" class=" image-inline" title="In situ"/>
                             </span>
@@ -128,9 +128,9 @@
                         </div>
                       </div>
                       <p><span style="height: 1.5em;">The Copernicus programme comprises satellite-borne earth observation, in-situ data and a services component that combines these in order to provide value added information essential for monitoring the earth's environment.</span></p>
-                      <p><span style="height: 1.5em;">The Copernicus land monitoring service provides geographical information on land cover/land use and on variables related to vegetation state and the water cycle. It supports applications in a variety of domains, such as spatial planning, forest management, water management and agriculture and consists of the above four main components.</span></p>
+                      <p><span style="height: 1.5em;">The Copernicus insitu monitoring service provides geographical information on insitu cover/insitu use and on variables related to vegetation state and the water cycle. It supports applications in a variety of domains, such as spatial planning, forest management, water management and agriculture and consists of the above four main components.</span></p>
                       <div class="external-link">
-                        <a href="http://www.eea.europa.eu/themes/landuse/gio-land/gio-land" target="_blank">Read more</a>
+                        <a href="http://www.eea.europa.eu/themes/insituuse/gio-insitu/gio-insitu" target="_blank">Read more</a>
                       </div>
                     </div>
                   </div>
@@ -155,13 +155,13 @@
               </dt>
 
               <dd class="portletItem odd">
-                <a href="mailto:gio.land@eea.europa.eu" class="tile contenttype-folder" rel="external" title="">
+                <a href="mailto:gio.insitu@eea.europa.eu" class="tile contenttype-folder" rel="external" title="">
                   Ask the service desk
                 </a>
               </dd>
 
               <dd class="portletItem even">
-                <a href="https://land.copernicus.eu/user-corner/technical-library" class="tile contenttype-folder" title="">
+                <a href="https://insitu.copernicus.eu/user-corner/technical-library" class="tile contenttype-folder" title="">
                   Technical library
                 </a>
               </dd>
@@ -173,31 +173,31 @@
               </dd>
 
               <dd class="portletItem even">
-                <a href="https://land.copernicus.eu/user-corner/copernicus-land-newsletter" class="tile contenttype-folder" title="">
+                <a href="https://insitu.copernicus.eu/user-corner/copernicus-insitu-newsletter" class="tile contenttype-folder" title="">
                   Copernicus Land Newsletter
                 </a>
               </dd>
 
               <dd class="portletItem odd">
-                <a href="https://land.copernicus.eu/user-corner/land-use-cases" class="tile contenttype-folder" title="">
+                <a href="https://insitu.copernicus.eu/user-corner/insitu-use-cases" class="tile contenttype-folder" title="">
                   Land use cases
                 </a>
               </dd>
 
               <dd class="portletItem odd">
-                <a href="https://land.copernicus.eu/news" class="tile contenttype-folder">News</a>
+                <a href="https://insitu.copernicus.eu/news" class="tile contenttype-folder">News</a>
               </dd>
 
               <dd class="portletItem even frozenEntry">
-                <a href="https://land.copernicus.eu/user-corner/events" class="tile contenttype-folder" title="">Events</a>
+                <a href="https://insitu.copernicus.eu/user-corner/events" class="tile contenttype-folder" title="">Events</a>
               </dd>
 
               <dd class="portletItem odd">
-                <a href="https://land.copernicus.eu/user-corner/partners" class="tile contenttype-folder" title="">Partners</a>
+                <a href="https://insitu.copernicus.eu/user-corner/partners" class="tile contenttype-folder" title="">Partners</a>
               </dd>
 
               <dd class="portletItem even frozenEntry">
-                <a href="https://land.copernicus.eu/user-corner/publications" class="tile contenttype-folder" title="">Publications</a>
+                <a href="https://insitu.copernicus.eu/user-corner/publications" class="tile contenttype-folder" title="">Publications</a>
               </dd>
 
               <dd class="portletFooter">
