--- a/insitu/copernicus/theme/static/redesign-index.html
+++ b/insitu/copernicus/theme/static/redesign-index.html
@@ -188,9 +188,9 @@
                             <p>Atmosphere</p>
                           </a>
                         </li>
-                        <li class="insitu-land text-center">
-                          <a href="//land.copernicus.eu" target="_blank">
-                            <img src="./copernicus/insitu-logo-land.svg" alt="Logo Land" />
+                        <li class="insitu-insitu text-center">
+                          <a href="//insitu.copernicus.eu" target="_blank">
+                            <img src="./copernicus/insitu-logo-insitu.svg" alt="Logo Land" />
                             <p>Land</p>
                           </a>
                         </li>
@@ -229,21 +229,21 @@
           <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
               <!-- Events list -->
-                <!-- Moved in: land/copernicus/theme/browser/events.pt -->
+                <!-- Moved in: insitu/copernicus/theme/browser/events.pt -->
                 <div data-diazo="insitu-events-list">Events list</div>
               <!-- Events list -->
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
               <!-- Latest news -->
-                <!-- Moved in: land/copernicus/theme/browser/news.pt -->
+                <!-- Moved in: insitu/copernicus/theme/browser/news.pt -->
                 <div data-diazo="insitu-news-list">News list</div>
               <!-- Latest news -->
             </div>
 
             <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
               <!-- Latest reports -->
-                <!-- Moved in: land/copernicus/theme/browser/reports.pt -->
+                <!-- Moved in: insitu/copernicus/theme/browser/reports.pt -->
                 <div data-diazo="insitu-reports-list">reports list</div>
               <!-- Latest reports -->
             </div>
@@ -293,7 +293,7 @@
                         <a href="https://insitu.copernicus.eu/@@search-by-tags#?selected_tags=open-data" class="btn btn-default insitu-btn-open-data">Open Data</a>
                       </div>
                       <div id="insitu-tags-2">
-                        <a href="https://insitu.copernicus.eu/@@search-by-tags#?selected_tags=land" class="btn btn-default insitu-btn-land">Land</a>
+                        <a href="https://insitu.copernicus.eu/@@search-by-tags#?selected_tags=insitu" class="btn btn-default insitu-btn-insitu">Land</a>
                         <a href="https://insitu.copernicus.eu/@@search-by-tags#?selected_tags=marine" class="btn btn-default insitu-btn-marine">Marine</a>
                         <a href="https://insitu.copernicus.eu/@@search-by-tags#?selected_tags=atmosphere" class="btn btn-default insitu-btn-atmosphere">Atmosphere</a>
                         <a href="https://insitu.copernicus.eu/@@search-by-tags#?selected_tags=emergency" class="btn btn-default insitu-btn-emergency">Emergency</a>
