--- a/land/copernicus/theme/static/redesign-simple-page.html
+++ b/land/copernicus/theme/static/redesign-simple-page.html
@@ -60,7 +60,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="https://insitu.copernicus.eu/sitemap">
+                        <a href="/sitemap">
                           <img src="./web-icon.png" alt="Web icon" />
                         </a>
                       </li>
