[refs #116804] Fix link for newslettr.

--- a/land/copernicus/theme/static/redesign-simple-page.html
+++ b/land/copernicus/theme/static/redesign-simple-page.html
@@ -231,7 +231,7 @@
                 <div class="text-center">
                   <p class="text-uppercase">
                     Stay informed on our latest news!
-                    <a href="https://insitu.copernicus.eu/newsletter/subscribe" class="btn btn-primary text-uppercase insitu-btn-subscribe" target="_blank">Subscribe to newsletter</a>
+                    <a href="/newsletter/subscribe" class="btn btn-primary text-uppercase insitu-btn-subscribe" target="_blank">Subscribe to newsletter</a>
                   </p>
                 </div>
               </div>
