Refs #281117 - Update subscribe link in footer.

--- a/land/copernicus/theme/static/redesign-index.html
+++ b/land/copernicus/theme/static/redesign-index.html
@@ -344,6 +344,7 @@
                           <ul class="list-inline">
                             <li><a href="./about" target="_blank">About</a></li>
                             <li><a href="./sitemap" target="_blank">Site map</a></li>
+                            <li><a href="https://subscriptions.copernicus-insitu.eea.europa.eu/copernicus-in-situ-subscription" target="_blank">Sign up to our newsletter</a></li>
                             <li><a href="./contact" target="_blank">Contact us</a></li>
                           </ul>
                         </div>
