--- a/land/copernicus/theme/static/redesign-simple-page.html
+++ b/land/copernicus/theme/static/redesign-simple-page.html
@@ -258,6 +258,7 @@
                             <li><a href="/about" target="_blank">About</a></li>
                             <li><a href="/privacy-statement" target="_blank">Privacy statement</a></li>
                             <li><a href="/sitemap" target="_blank">Site map</a></li>
+                            <li><a href="https://subscriptions.copernicus-insitu.eea.europa.eu/copernicus-in-situ-subscription" target="_blank">Sign up to our newsletter</a></li>
                             <li><a href="/contact" target="_blank">Contact us</a></li>
                           </ul>
                         </div>
